# uvlf-hod

./: .gitignore  .readthedocs.yaml  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: .readthedocs.yaml  conf.py  index.rst  requirements.txt
docs/examples/: basic_usage.ipynb
examples/: basic_usage.ipynb  basic_usage.py  bouwens21_data.py
halogal/: cosmology.py  develop.ipynb  model.py
halogal/models/: parametrization.py
tests/: test_core.py
uvlf_hod/: __init__.py  __version__.py  config.py  core.py  cosmology.py  hod.py  luminosity.py  model.py
uvlf_hod/models/: __init__.py
